# avalog

./: .gitignore  Cargo.toml  README.md
assets/: help-application.txt  help-avatars.txt  help-equality.txt  help-eval.txt  help-graph.txt  help-hide.txt  help-inequality.txt  help-list.txt  help-pairs.txt  help-roles.txt  help-rules.txt  help.txt  syntax.txt
examples/: avalog_repl.rs  repl.rs  test.rs
source/: amb.txt  amb_fail.txt  amb_success-2.txt  amb_success.txt  app_empty.txt  app_match.txt  associativity-0.txt  associativity.txt  avalog_state.txt  bool_alg-0.txt  bool_alg.txt  bool_alg2.txt  bool_alg3.txt  borrowchk.txt  capital-0.txt  capital.txt  category.txt  chu_space.txt  closure_calculus.txt  commutativity-0.txt  commutativity.txt  convert_eq_into_has-0.txt  convert_eq_into_has.txt  convert_has_into_eq2-0.txt  convert_has_into_eq2.txt  convert_has_into_eq3-0.txt  convert_has_into_eq3.txt  convert_has_into_eq4.txt  convert_has_into_eq5-0.txt  convert_has_into_eq5.txt  convert_has_into_eq6-0.txt  convert_has_into_eq6-1.txt  convert_has_into_eq6.txt  copy-0.txt  copy.txt  grandparent-0.txt  grandparent.txt  inner.txt  inner2.txt  mom_and_dad-0.txt  (+48 more)
src/: lib.rs  parsing.rs
tests/: lib.rs
